# p2p-file-transfer

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: auth.rs  client.rs  config.rs  connection.rs  file.rs  lib.rs  main.rs  nat.rs  parsing.rs  protocol.rs  server.rs  socket.rs
