[package]
name = "file_transfer"
version = "0.1.0"
edition = "2021"
author = ["gotlou"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
stunclient = "0.3.1"
memmap2 = "0.5.8"
tracing = "0.1"
tracing-subscriber = "0.2.0"
async-trait = "0.1.64"

