[package]
name = "file_transfer"
version = "0.1.0"
edition = "2021"
author = ["gotlou"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
stunclient = "0.3.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
async-trait = "0.1.64"
quinn = { version = "0.10.2", features = [ "rustls" ] }
rustls =  "0.21.7"
rcgen = "0.11.3"
anyhow = "1.0.75"
thiserror = "1.0.49"
toml = "0.8.4"
base64 = "0.21.5"
quinn-proto = "0.10.5"
clap = { version = "4.4.7", features = [ "derive" ] }
